Add workload reconciliation review
Add non-destructive daily/weekly completeness checks and expose under/over-reporting as a separate review stage before allocation and publish.